MyFaces Release Notes
=====================

----------------------------------------------------------------------
Changes in Release 0.3.3
* Stylesheet support for navigation-menu along with implementing a lots of other common attributes
* Validators added

----------------------------------------------------------------------
Changes in Release 0.3.2

* some serious bugs fixed (Tomcat 4.1.x issues)
* UIFileUpload with FileUploadRenderer and FileUploadTag
* new "File upload" example
* added com.oreilly.servlet package cos.jar:
   - Base64 encoding instead of MimeUtility from mail.jar
   - MultiPartFilter for the new UIFileUpload
* removed mail.jar: was only needed for Base64-Encoding
* web-application "tagunit" added (only CVS), can be used for testing myfaces-taglibs
* "enabledOnUserRole" and "visibleOnUserRole" attributes for miscellaneous input
  and command components
* "setBundle" tag
* "errors" tag renamed to "output_errors"
* "image" tag renamed to "graphic_image"
* "input_errors" tag was removed (see "output_errors")
* Facet support (see KnownIssues.txt !)
* Enhanced JspInfo caching. Automatic check for modified JSPs.

----------------------------------------------------------------------
Changes in Release 0.3.1

* completely restructured directories
* revised documentation
* revised build files
* 4 different state-saving modes: see features.html for details

----------------------------------------------------------------------
Changes in Release 0.3.0

* This is a major release, that has lots of changes to make MyFaces
  conform to the new EA3 specification.
* UISortHeader with SortColumnRenderer (see features.html)
* LayoutRenderer (see features.html)

----------------------------------------------------------------------
Changes in Release 0.1.4

* tons of adds, changes and fixes to better conform to the specification.
* List- and GridRenderer, new sample pages

----------------------------------------------------------------------