@@ -19,13 +19,20 @@
 package net.sourceforge.myfaces.renderkit.html;
 
 import net.sourceforge.myfaces.component.CommonComponentAttributes;
+import net.sourceforge.myfaces.component.UIComponentUtils;
 import net.sourceforge.myfaces.renderkit.attr.CommonRendererAttributes;
 import net.sourceforge.myfaces.renderkit.attr.DataRendererAttributes;
+import net.sourceforge.myfaces.renderkit.callback.CallbackRenderer;
+import net.sourceforge.myfaces.renderkit.callback.CallbackSupport;
 
 import javax.faces.component.UIComponent;
 import javax.faces.component.UIPanel;
 import javax.faces.context.FacesContext;
+import javax.faces.render.Renderer;
 import java.io.IOException;
+import java.util.Iterator;
+import java.util.Collection;
+import java.util.Arrays;
 
 /**
  * DOCUMENT ME!
@@ -61,20 +68,61 @@ public class DataRenderer
         addAttributeDescriptors(UIPanel.TYPE, TLD_HTML_URI, "panel_data", PANEL_DATA_ATTRIBUTES);
     }
 
-
-
-    public void encodeBegin(FacesContext context, UIComponent component)
+    private static final Object DUMMY = new Object();
+    public void encodeBegin(FacesContext facesContext, UIComponent uiComponent)
             throws IOException
     {
+        // Init Iterator
+        Iterator it = getIterator(facesContext, uiComponent);
+
+        // Set ModelValue VAR_ATTR
+        String varAttr = (String)uiComponent.getAttribute(VAR_ATTR);
+        facesContext.setModelValue(varAttr, it != null && it.hasNext() ? it.next() : null);
     }
 
-    public void encodeEnd(FacesContext context, UIComponent component)
+    public void encodeEnd(FacesContext facesContext, UIComponent uiComponent)
             throws IOException
     {
+        //Remove iterator after last row
+         uiComponent.setAttribute(ITERATOR_ATTR, null);
+        //Reset ModelValue VAR_ATTR
+         facesContext.setModelValue(VAR_ATTR, null);
     }
 
     public void encodeChildren(FacesContext context, UIComponent component)
         throws IOException
     {
     }
+
+    protected Iterator getIterator(FacesContext facesContext, UIComponent uiComponent)
+    {
+        Iterator iterator = (Iterator)uiComponent.getAttribute(ITERATOR_ATTR);
+        if (iterator == null)
+        {
+            Object v = uiComponent.currentValue(facesContext);
+            if (v instanceof Iterator)
+            {
+                iterator = (Iterator)v;
+            }
+            else if (v instanceof Collection)
+            {
+                iterator = ((Collection)v).iterator();
+            }
+            else if (v instanceof Object[])
+            {
+                iterator = Arrays.asList((Object[])v).iterator();
+            }
+            else if (v instanceof Iterator)
+            {
+                iterator = (Iterator)v;
+            }
+            else
+            {
+                throw new IllegalArgumentException("Value of component " + UIComponentUtils.toString(uiComponent) + " is neither collection nor array.");
+            }
+            uiComponent.setAttribute(ITERATOR_ATTR, iterator);
+        }
+        return iterator;
+    }
+
 }
