@@ -5,6 +5,7 @@ MyFaces Release Notes
 Changes in Release 0.3.3
 * Stylesheet support for navigation-menu along with implementing a lots of other common attributes
 * Validators added
+* DataRenderer works standalone now (before it just could be used within a List)
 
 ----------------------------------------------------------------------
 Changes in Release 0.3.2
